--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
                 <pre id="result" />
             </div>
          </main>
-         <script src="./index.js"></script>
+         <script src="./app.bundle.js"></script>
     </body>
 </html>
