actions code generation

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
         <main>
             <input id="input" placeholder="action type" />
             <div>
-                <pre id="result" />
+                <pre id="constants-result"></pre>
+                <pre id="actions-result"></pre>
             </div>
          </main>
          <script src="./app.bundle.js"></script>
